  main menu.

Integrations, testing and documentation
---------------------------------------
- Removed the support for the Mesquite toolkit. We recommend using MFEM's TMOP
  functionality instead for mesh optimization. See the mesh-optimizer miniapp.

- The following integrations have updated minimum version requirements:
  * RAJA >= 2022.10.3

Miscellaneous
-------------
- VisItDataCollection now correctly handles collection names containing
  underscores.

- VisItDataCollection::SetPadDigits() no longer alters the number of digits
  used to represent the MPI rank because VisIt seems to require 6 digits.
  This parameter can still be explicitly overridden with
  VisItDataCollection::SetPadDigitsRank().

API changes
-----------
- The implicit cast methods of class Vector to 'double *' and 'const double *'
  have been deprecated and generate deprecation warnings if used. They will be
  removed in a future release.

- The methods Mesh::GetFaceBaseGeometry and Mesh::GetFaceGeometryType have been
  deprecated, and Mesh::GetFaceGeometry (which provides identical functionality)
  should be used instead.

Version 4.5, released on October 22, 2022
=========================================

Meshing improvements
--------------------
- Added new SubMesh and ParSubMesh classes that can be used to extract a subset
  of a given Mesh. These classes have the same functionality as Mesh and ParMesh
  and work with all existing MFEM interfaces like finite element spaces etc.

- Added a method, ParMesh::GetSerialMesh(), that reconstructs a partitioned
  parallel mesh on a given single rank. Also, added ParMesh::PrintAsSerial(),
  which saves the reconstructed serial mesh to a C++ stream on rank 0.

- Added more 3D TMOP metrics, as well as specialized metrics for mesh
  untangling and worst-case quality improvement.

- Added a new method, Mesh::NodesUpdated, which should be called after the mesh
  node coordinates have changed, e.g. after the mesh has moved. This is